chore: change swaggo output dir
